--- a/quest.yml
+++ b/quest.yml
@@ -1,17 +1,17 @@
-id: example_test1
-title: Funnel Drop
-description: "What’s worse than a bug? A bug that happens in the production environment! \nIt affects real users, who often have pitchforks and torches and would not hesitate to use them on you. Time to learn how to handle such bugs—from getting a support ticket, through bug replication, to making sure it can’t bug (ha!) anyone ever again."
-summary: "Welcome to real life - where a commit on one side of the world affects users on the other side. Most of the problems you’ll encounter won’t be as straightforward, and we’ll first need to dive into the data to analyze what exactly the problem is.\n\nFinding needles in haystacks is a crucial part of every engineer's work. No two bugs are the same, but the process by which they’re eliminated often begins with cutting and slicing data until we isolate the exact problem. Then we need to reproduce it locally as it’s the only way to know that we are fixing the problem. Finally, it’s time to fix the problem and deploy it to production. \n\nThe reproduction, by the way, can be a challenge in itself, as developing on a desktop with a stable and fast internet connection will give you the experience of a certain subset of your users. Others might use the product on a different type of device or with very limited bandwidth— circumstances that can expose bugs. Luckily, we have enough tools that let us mimic different users."
-level: beginner
+id: route_to_victory
+title: Route to Vicory
+description: "When it comes to product like anythink, security is a key. Imagine your team received a complain from user who was able to access private page without logging in. This is a worst-scenario, as it affects users and can damage the reputation of the site. Its time for you to learn how to handle the complain by identifying, replicating and resolving routing issues in your product."
+summary: "You learned to add protected routing to safeguard your pages with ease. Using this quest you will be a routing expert in no time."
+level: intermediate
 steps:
-- funneldrop_analyze_data
-- funneldrop_reproduce_locally
-- funneldrop_fixing_bug_pr
-duration: 1.5
+- find_the_flaw
+- guard_the_gates
+- lock_the_gates
+duration: 1.0
 skills:
 - frontend
 - debugging
 - observability
 - communication
 questDependency: docker_localsetup
-slogan: It's time for...
+slogan: Shield Your Routes, Secure Your Victory
