--- a/steps/guard_the_gates.yml
+++ b/steps/guard_the_gates.yml
@@ -1,16 +1,20 @@
 id: guard_the_gates
 learningObjectives: 
-- Fixing a bug 
+- Users will learn how to restrict access to pages by creating a PrivateRoute component which will redirect the user to Login Page if user try to access protected page without authentication.
 hints:
-- Try to inspect the problematic view and see where it is on the screen
+- User will need to create a new component called as `PrivateRoute`.
+- User can refer to the example from documentaion to understand how to create private route https://v5.reactrouter.com/web/example/auth-workflow
 startFlow:
   do:
   - actionId: bot_message
     params:
       person: keen
       messages:
-      - text: "OK, I think we have everything we need. Can you please **fix the code** and **open a PR**, so we can release a new version to production?"
+      - text: "So, after investigating the issue, we've determined that the problem lies with the routing of our website. Specifically, the **settings** and **editor** page are not properly protected, allowing unauthenticated users to access them."
         delay: 1500
+      - text: "To prevent this happening from future our team has decided to fix the issue. To fix this, you need to create a React Component called as `PrivateRoute` that will handle protection of these pages. You can use `react-router-dom` to handle the logic."
+        delay: 1500
+      - text: "Can you please create the component and add necessary logic to ensure only authenticated users can access the resticted pages. "
 githubActions:
   frontend:
     capabilities:
