--- a/steps/guard_the_gates.yml
+++ b/steps/guard_the_gates.yml
@@ -11,14 +11,12 @@ startFlow:
     params:
       person: keen
       messages:
-      - text: "So, after investigating the issue, we've determined that the problem lies with the routing of our website. Few pages like **settings** and **editor** page are not properly protected, allowing unauthenticated users to access them."
-        delay: 2000
-      - text: "To prevent this happening from future our team has decided to fix the issue."
-        delay: 700
+      - text: "So, after investigating the issue, we've determined that the problem lies with the routing of our website. Few pages like **settings** and **editor** page are not properly protected, allowing unauthenticated users to access them. To prevent this happening from future our team has decided to fix the issue."
+        delay: 2500
       - text: "To fix this, you need to create a React Component called as `PrivateRoute` that will handle protection of these pages."
-        delay: 1500
+        delay: 2500
       - text: "Can you please create the `PrivateRoute` component and add necessary logic to ensure only authenticated users can access the restricted pages. Create a PR once you are done."
-        delay: 800
+        delay: 5800
       - text: "Don't hesitate to ask for my help!!"
         delay: 800
 trigger:
@@ -39,6 +37,24 @@ trigger:
             params:
               person: keen
               message: "On it, I'll review the changes right away."
+          if:
+            conditions:
+            - conditionId: github_is_file_added
+              equals: false
+              params:
+                fileName: frontend/src/components/PrivateRoute.js
+              then:
+                do:
+                - actionId: bot_message
+                  params:
+                    person: keen
+                    messages:
+                      - text: "Umm, that doesn't look right. Did you create PrivateRoute.js in Components folder?"
+                        delay: 1400
+                - actionId: github_pr_reject
+                  params:
+                    person: keen
+                    message: "Umm, that doesn't look right. Did you create PrivateRoute.js in Components folder?"
         github_pr_workflow_complete_success:
           if:
             conditions:
@@ -63,12 +79,12 @@ trigger:
                   params:
                     person: keen
                     messages:
-                      - text: "Umm, that doesn't look right. Did you create PrivateRoute.js in Components folder?"
+                      - text: "that doesn't look right. Did you create PrivateRoute.js in Components folder?"
                         delay: 1400
                 - actionId: github_pr_reject
                   params:
                     person: keen
-                    message: "Umm, that doesn't look right. Did you create PrivateRoute.js in Components folder?"
+                    message: "that doesn't look right. Did you create PrivateRoute.js in Components folder?"
         github_pr_workflow_complete_failure:
           do:
           - actionId: bot_message
