--- a/steps/guard_the_gates.yml
+++ b/steps/guard_the_gates.yml
@@ -86,5 +86,5 @@ githubActions:
   backend:
   frontend:
     capabilities:
-    - @testing-library/react
+    - \@testing-library/react
     testFile: "private_routes.test.js"
