--- a/steps/lock_the_gates.yml
+++ b/steps/lock_the_gates.yml
@@ -1,47 +1,83 @@
 id: lock_the_gates
 learningObjectives: 
-- Reproducing a bug locally 
+- Users will learn how to use PrivateRoute component to protect unautherized access on restricted pages.
 hints:
-- All modern web browsers can show you what your website looks like on mobile, so
-  you'll be able to easily debug and develop for mobile. You can use the developer
-  tools to see it.
+- Use the Private route component for settings and editor page.
+- Pass createUser as props to PrivateRoute.
 startFlow:
   do:
   - actionId: bot_message
     params:
       person: keen
       messages:
-      - text: "Now that we know which users are affected, go ahead and fix the bug!"
+      - text: "Excellent work! We now have a **PrivateRoute** component which we can prevent unauthenticated users from accessing restricted pages."
         delay: 1300
-      - text: "Only, you know, don’t—you might break something"
+      - text: "Can you use **PrivateRoute** component for the **/settings** and **/editor** route."
         delay: 1400
-      - text: "It’s not that I don’t trust you, but the management definitely doesn’t, so please begin by **reproducing the bug locally** and sending me the **URL of the path** where you saw the issue. Then we’ll try to fix it on your machine, and only if it works, we’ll fix it in production."
-        delay: 3500
+      - text: "Make a PR once you have made the changes."
+        delay: 1500
 trigger:
-  type: user_message
+  type: github_pr_lifecycle_status
   params: 
     person: keen
   flowNode:
-    if:
-      conditions:
-      - conditionId: text_match_regex
-        params:
-          text: "${userMessageText}"
-          regex: ".*localhost.*@"
-      then:
-        do:
-        - actionId: bot_message
-          params:
-            person: keen
-            messages:
-            - text: "Wow, that is indeed a problematic screen! Looks like we forgot about mobile devices when we created this screen."
-              delay: 1500
-        - actionId: finish_step
-      else:
-        do:
-        - actionId: bot_message
-          params:
-            person: keen
-            messages:
-            - text: "Umm, that doesn't look right. Maybe it's a different URL?"
-              delay: 1400
+    switch:
+      key: "${eventType}"
+      cases:
+        github_pr_opened:
+          do:
+          - actionId: bot_message
+            params:
+              person: keen
+              messages:
+              - text: "On it, I'll review the changes right away."
+                delay: 1000
+          - actionId: github_pr_comment
+            params:
+              person: keen
+              message: "On it, I'll review the changes right away."
+          if:
+            conditions:
+            - conditionId: github_is_file_modified
+              equals: false
+              params:
+                fileName: frontend/src/components/App.js
+            then:
+              do:
+              - actionId: bot_message
+                params:
+                  person: keen
+                  messages:
+                    - text: "Umm, that doesn't look right. Did you use PrivateRoute component?"
+                      delay: 1400
+              - actionId: github_pr_reject
+                params:
+                  person: keen
+                  message: "Umm, that doesn't look right. Did you use PrivateRoute component?"
+        github_pr_workflow_complete_success:
+          do:
+            - actionId: bot_message
+              params:
+                person: keen
+                messages:
+                - text: "This looks great! Just approved. Go ahead and merge."
+                  delay: 2000
+            - actionId: github_pr_approve
+              params:
+                person: keen
+                message: "Nailed it! Excellent job @${user.githubuser}! You can now merge the PR."
+        github_pr_workflow_complete_failure:
+          do:
+          - actionId: bot_message
+            params:
+              person: keen
+              messages:
+              - text: "Make sure your fix passes all the checks, then try again please."
+                delay: 3000
+          - actionId: github_pr_reject
+            params:
+              person: keen
+              message: "Looks like this code change didn’t fix the problem. Can you take a second look?"
+        github_pr_merged:
+          do:
+          - actionId: finish_step
