--- a/steps/lock_the_gates.yml
+++ b/steps/lock_the_gates.yml
@@ -11,15 +11,13 @@ startFlow:
       person: keen
       messages:
       - text: "Excellent work! We now have a **PrivateRoute** component which we can prevent unauthenticated users from accessing restricted pages."
-        delay: 1300
+        delay: 2300
       - text: "Can you use **PrivateRoute** component for the **/settings** and **/editor** route."
-        delay: 1400
+        delay: 2400
       - text: "Make a PR once you have made the changes."
-        delay: 1500
+        delay: 2500
 trigger:
   type: github_pr_lifecycle_status
-  params: 
-    person: keen
   flowNode:
     switch:
       key: "${eventType}"
@@ -56,16 +54,16 @@ trigger:
                   message: "Umm, that doesn't look right. Did you use PrivateRoute component?"
         github_pr_workflow_complete_success:
           do:
-            - actionId: bot_message
-              params:
-                person: keen
-                messages:
-                - text: "This looks great! Just approved. Go ahead and merge."
-                  delay: 2000
-            - actionId: github_pr_approve
-              params:
-                person: keen
-                message: "Nailed it! Excellent job @${user.githubuser}! You can now merge the PR."
+          - actionId: bot_message
+            params:
+              person: keen
+              messages:
+              - text: "This looks great! Just approved. Go ahead and merge."
+                delay: 2000
+          - actionId: github_pr_approve
+            params:
+              person: keen
+              message: "Nailed it! Excellent job @${user.githubuser}! You can now merge the PR."
         github_pr_workflow_complete_failure:
           do:
           - actionId: bot_message
@@ -81,3 +79,9 @@ trigger:
         github_pr_merged:
           do:
           - actionId: finish_step
+githubActions:
+  backend:
+  frontend:
+    capabilities:
+    - enzyme
+    testFile: "use_private_route.test.js"
