--- a/steps/find_the_flaw.yml
+++ b/steps/find_the_flaw.yml
@@ -10,9 +10,9 @@ startFlow:
     params:
       person: keen
       messages:
-      - text: "Welcome to the first step of the 'Route to Victory'. I'm Keen, one of your colleagues here at Anythink."
+      - text: "Hello!! I'm Keen, one of your colleagues here at Anythink."
         delay: 700
-      - text: "I'm here to help you with this quest. We've received a report that user can access all pages without logging in. This is a  security vulnerability that we need to address. I need your help to find a page that should only be accessible to logged in users, but is currently accessible without logging in?"
+      - text: "We've received a report that user can access all pages without logging in. This is a security vulnerability that we need to address. I need your help to find a page that should only be accessible to logged in users, but is currently accessible without logging in?"
         delay: 2000
       - text: "Once you’ve found it, please drop me a message here and let me know the route name of that page. It will help us to investigate and fix the issue."
         delay: 2500
