--- a/steps/find_the_flaw.yml
+++ b/steps/find_the_flaw.yml
@@ -1,6 +1,6 @@
 id: find_the_flaw
 learningObjectives: 
-- Identify which restricted pages are accessible without login and verify the issue by replicating it. 
+- Identify which restricted pages are accessible without logging in.
 hints:
 - To know what all routes are configured, check the App.js file.  
 - Navigate to each route and if you think it should be a restricted route accessible to only authenticated users, message the page name on Snack.
