--- a/steps/guard_the_gates.yml
+++ b/steps/guard_the_gates.yml
@@ -11,7 +11,7 @@ startFlow:
     params:
       person: keen
       messages:
-      - text: "So, after investigating the issue, we've determined that the problem lies with the routing of our website. Few pages like **settings** and **editor** page are not properly protected, allowing unauthenticated users to access them. To prevent this happening in the future, our team has decided to resolve the issue."
+      - text: "So, after investigating the issue, we've determined that the problem lies with the routing of our website. Few pages like **settings** and **editor** page are not properly protected, allowing unauthenticated users to access them. To prevent this from happening in the future, our team has decided to resolve the issue."
         delay: 3500
       - text: "To fix this, you need to create a React Component called as `PrivateRoute` that will handle protection of these pages."
         delay: 3500
