--- a/steps/find_the_flaw.yml
+++ b/steps/find_the_flaw.yml
@@ -14,7 +14,7 @@ startFlow:
         delay: 700
       - text: "We've received a report that users can access all pages without logging in. This is a security vulnerability that we need to address. I need your help to find a page that should only be accessible to logged-in users, but is currently accessible without logging in?"
         delay: 2000
-      - text: "Once you’ve found it, please drop me a message here and let me know the route name of that page. It will help us to investigate and fix the issue."
+      - text: "Once you’ve found it, please drop me a message here and :instruction[let me know the route name of that page]. It will help us to investigate and fix the issue."
         delay: 2500
 trigger:
   type: user_message
