--- a/steps/guard_the_gates.yml
+++ b/steps/guard_the_gates.yml
@@ -2,10 +2,11 @@ id: guard_the_gates
 learningObjectives: 
 - Create a PrivateRoute component that will redirect the user to Login Page if the user tries to access restricted pages without authentication.
 hints:
-- Create a new component called as `PrivateRoute` in components folder.
+- Create a new file called as `PrivateRoute` in components folder.
 - You can use `react-router-dom` to handle the logic.
-- Refer to the example from documentation  to understand how to create private route https://v5.reactrouter.com/web/example/auth-workflow
-- Make use if currentUser to check if user is logged-in or not.
+- Make use of currentUser to check if user is logged-in or not & pass it as props to PrivateRoute.
+- Refer to the example from documentation to understand how to create a private route https://v5.reactrouter.com/web/example/auth-workflow
+
 startFlow:
   do:
   - actionId: bot_message
