--- a/steps/lock_the_gates.yml
+++ b/steps/lock_the_gates.yml
@@ -2,8 +2,8 @@ id: lock_the_gates
 learningObjectives: 
 - Update the routing and use the PrivateRoute component to prevent unauthenticated users from accessing restricted pages.
 hints:
-- Use the Private route component for settings and editor page.
-- Pass createUser as props to PrivateRoute.
+- Use the PrivateRoute created in previous step to restrict access. 
+- Make sure you are passing createUser as props to PrivateRoute.
 startFlow:
   do:
   - actionId: bot_message
