--- a/steps/find_the_flaw.yml
+++ b/steps/find_the_flaw.yml
@@ -3,7 +3,7 @@ learningObjectives:
 - Identify which restricted pages are accessible without logging in.
 hints:
 - To see all configured routes, check the App.js file in frontend.
-- Navigate to each route and if you think it should be a restricted route accessible to only authenticated users, message the page name on Snack.
+- Try going over each route and tell me which one you think you should restrict to authenticated users only
 - Do you think adding a item should be allowed to unauthenticated users?
 startFlow:
   do:
