--- a/steps/find_the_flaw.yml
+++ b/steps/find_the_flaw.yml
@@ -15,7 +15,7 @@ startFlow:
         delay: 700
       - text: "We've received a report that users can access all pages without logging in. This is a security vulnerability that we need to address."
         delay: 1200 
-      - text: "In order to help us locate and fix the issue, can you please take a look at the routes in your frontend code and let me know if you find any pages that should only be accessible to logged-in users, but are currently accessible without logging in."
+      - text: "In order to help us locate and fix the issue, can you please take a look at the routes in your frontend code and let me know if you find any page that should only be accessible to logged-in users, but are currently accessible without logging in."
         delay: 2000
       - text: "Once you’ve found it, please drop me a message here with :instruction[the route name of that page.]. This will help us pinpoint the exact location of the problem and fix it quickly."
         delay: 2500
