add test for authenticated user

--- a/steps/lock_the_gates.yml
+++ b/steps/lock_the_gates.yml
@@ -82,6 +82,10 @@ trigger:
           - actionId: finish_step
 githubActions:
   backend:
+    capabilities:
+      - axios
+      - dotenv
+    testFile: "backend.js"
   frontend:
     capabilities:
       - jest-puppeteer
